# dbterm

./: .gitignore  CMakeLists.txt  README.md  help.txt
include/: controlpanel.h  database.h  dbpanel.h  helppanel.h  leftpanel.h  rightpanel.h  win.h
src/: CMakeLists.txt  controlpanel.c  database.c  dbpanel.c  helppanel.c  leftpanel.c  main.c  rightpanel.c  win.c
